goatcounter/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goatcounter
  namespace: analytics
spec:
  selector:
    app: goatcounter
  ports:
  - protocol: TCP
    port: 8080
    targetPort: http
  type: ClusterIP
