goatcounter/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: goatcounter
  namespace: analytics
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: analytics.rohitpotato.xyz
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: goatcounter
              port:
                number: 8080
  tls:
    - hosts:
        - analytics.rohitpotato.xyz
      secretName: goatcounter-tls
